Pin ruby image used
CI was entirely broken when `ruby:latest` was updated to 4.0.
We shouldn't have all our CI depend on a `:latest` image that
can change at any moment.

--- a/pipelines/rails-ci-nightly/initial.yml
+++ b/pipelines/rails-ci-nightly/initial.yml
@@ -62,7 +62,7 @@ steps:
         -e DOCKER_IMAGE
         -e RUN_QUEUE
         -e QUEUE
-        ruby:latest
+        ruby:4.0
         .buildkite/bin/pipeline-generate rails-ci |
         buildkite-agent pipeline upload
     timeout_in_minutes: 5
