--- a/pipelines/buildkite-config/initial.yml
+++ b/pipelines/buildkite-config/initial.yml
@@ -25,7 +25,7 @@ steps:
       label: ":nail_care: buildkite-config: lint"
       plugins:
         - docker#v5.8.0:
-            image: "ruby:latest"
+            image: "ruby:4.0"
     - command: |
         git config --global --add safe.directory /workdir
         bundle install
@@ -33,7 +33,7 @@ steps:
       label: ":test_tube: buildkite-config: rake test"
       plugins:
         - docker#v5.8.0:
-            image: "ruby:latest"
+            image: "ruby:4.0"
             environment:
               - CI
               - BUILDKITE
@@ -58,7 +58,7 @@ steps:
           -v "$$PWD/tmp":/app/tmp:rw
           -e BUNDLE_FROZEN
           -e BUILDKITE_BUILD_ID
-          ruby:latest
+          ruby:4,0
           ./bin/pipeline-annotate
     - command: |
         mkdir -p tmp
@@ -82,7 +82,7 @@ steps:
           -e RAILS_CI_NIGHTLY
           -e BUNDLE_FROZEN
           -e BUILDKITE_BUILD_ID
-          ruby:latest
+          ruby:4,0
           ./bin/pipeline-annotate
 
   - group:
