--- a/pipelines/docs-preview/initial.yml
+++ b/pipelines/docs-preview/initial.yml
@@ -61,7 +61,7 @@ steps:
         -e DOCKER_IMAGE
         -e RUN_QUEUE
         -e QUEUE
-        ruby:latest
+        ruby:4.0
         .buildkite/bin/pipeline-generate docs-preview |
         buildkite-agent pipeline upload
     timeout_in_minutes: 5
