Clone with `--single-branch`

--- a/pipelines/docs-preview/initial.yml
+++ b/pipelines/docs-preview/initial.yml
@@ -22,10 +22,10 @@ steps:
       GIT_BRANCH="$${GIT_BRANCH#*:}"
 
       echo "Cloning buildkite-config:"
-      echo "git clone -b \"$$GIT_BRANCH\" \"$$GIT_REPO\" .buildkite"
-      git clone -b "$$GIT_BRANCH" "$$GIT_REPO" .buildkite
-
+      echo "git clone --single-branch -b \"$$GIT_BRANCH\" \"$$GIT_REPO\" .buildkite"
+      git clone --single-branch -b "$$GIT_BRANCH" "$$GIT_REPO" .buildkite
       rm -rf .buildkite/.git
+
       sh -c "$$PIPELINE_COMMAND"
 
       ([ -f .buildkite/.dockerignore ] && cp .buildkite/.dockerignore .dockerignore) || true
