--- a/pipelines/rails-ci-nightly/initial.yml
+++ b/pipelines/rails-ci-nightly/initial.yml
@@ -21,9 +21,9 @@ steps:
       GIT_BRANCH="$${CONFIG_BRANCH-main}"
       GIT_BRANCH="$${GIT_BRANCH#*:}"
 
-      echo "Cloning buildkite-config:"
-      echo "git clone -b \"$$GIT_BRANCH\" \"$$GIT_REPO\" .buildkite"
-      git clone -b "$$GIT_BRANCH" "$$GIT_REPO" .buildkite
+      echo "--- Cloning buildkite-config:"
+      echo "git clone --single-branch -b \"$$GIT_BRANCH\" \"$$GIT_REPO\" .buildkite"
+      git clone --single-branch -b "$$GIT_BRANCH" "$$GIT_REPO" .buildkite
 
       rm -rf .buildkite/.git
       sh -c "$$PIPELINE_COMMAND"
