--- a/pipelines/rails-ci/initial.yml
+++ b/pipelines/rails-ci/initial.yml
@@ -45,31 +45,30 @@ steps:
         .buildkite/bin/fetch-pr files > .buildkite/tmp/.pr-files.json) || true
 
       echo "--- Generating pipeline:"
-      docker run --rm
-        -v "$$PWD":/app:ro -w /app
-        -v "$$PWD/cache/bundler":/usr/local/bundle
-        -e CI
-        -e BUILDKITE
-        -e BUILDKITE_AGENT_META_DATA_QUEUE
-        -e BUILDKITE_BRANCH
-        -e BUILDKITE_BUILD_ID
-        -e BUILDKITE_MESSAGE
-        -e BUILDKITE_PULL_REQUEST
-        -e BUILDKITE_PULL_REQUEST_BASE_BRANCH
-        -e BUILDKITE_REBUILT_FROM_BUILD_ID
-        -e BUILD_QUEUE
-        -e BUNDLE_FROZEN
-        -e DOCKER_IMAGE
-        -e RUN_QUEUE
-        -e QUEUE
-        -e REGISTRY
-        ruby:4.0
+      docker run --rm \
+        -v "$$PWD":/app:ro -w /app \
+        -v "$$PWD/cache/bundler":/usr/local/bundle \
+        -e CI \
+        -e BUILDKITE \
+        -e BUILDKITE_AGENT_META_DATA_QUEUE \
+        -e BUILDKITE_BRANCH \
+        -e BUILDKITE_BUILD_ID \
+        -e BUILDKITE_MESSAGE \
+        -e BUILDKITE_PULL_REQUEST \
+        -e BUILDKITE_PULL_REQUEST_BASE_BRANCH \
+        -e BUILDKITE_REBUILT_FROM_BUILD_ID \
+        -e BUILD_QUEUE \
+        -e BUNDLE_FROZEN \
+        -e DOCKER_IMAGE \
+        -e RUN_QUEUE \
+        -e QUEUE \
+        -e REGISTRY \
+        ruby:4.0 \
         .buildkite/bin/pipeline-generate rails-ci > rails-ci.yml
 
       echo "--- Uploading pipeline:"
       buildkite-agent pipeline upload < rails-ci.yml
       rm rails-ci.yml
-
 
       ([ -f .buildkite/.dockerignore ] && cp .buildkite/.dockerignore .dockerignore) || true
     plugins:
