--- a/pipelines/rails-ci/initial.yml
+++ b/pipelines/rails-ci/initial.yml
@@ -58,11 +58,11 @@ steps:
         -e BUILDKITE_PULL_REQUEST_BASE_BRANCH \
         -e BUILDKITE_REBUILT_FROM_BUILD_ID \
         -e BUILD_QUEUE \
-        -e BUNDLE_FROZEN \
+        -e BUNDLE_DEPLOYMENT=1 \
+        -e BUNDLE_PATH=/usr/local/bundle \
         -e DOCKER_IMAGE \
         -e RUN_QUEUE \
         -e QUEUE \
-        -e REGISTRY \
         ruby:4.0 \
         .buildkite/bin/pipeline-generate rails-ci > rails-ci.yml
 
